[gd_scene load_steps=6 format=3 uid="uid://b3o4y2y2e1bx6"]

[ext_resource type="Script" path="res://project/src/ui/scenes/battlefield_view.gd" id="1"]

[node name="BattlefieldView" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Grid" type="Node2D" parent="."]
position = Vector2(8, 8)

[node name="Tiles" type="Node2D" parent="Grid"]

[node name="Reachability" type="Node2D" parent="Grid"]

[node name="Rays" type="Node2D" parent="Grid"]

[node name="Units" type="Node2D" parent="Grid"]

[node name="StatusLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 8.0
text = "Snapshot v0.0.0"

[node name="LogPanel" type="PanelContainer" parent="."]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.4
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -180.0
offset_right = 380.0
offset_bottom = -12.0

[node name="Margin" type="MarginContainer" parent="LogPanel"]

[node name="LogText" type="RichTextLabel" parent="LogPanel/Margin"]
bbcode_enabled = true
scroll_active = true
text = "[log]"
